--- a/trunk/src/ohmms-config.h.cmake.in
+++ b/trunk/src/ohmms-config.h.cmake.in
@@ -80,4 +80,7 @@
 /* Define the index of the walker iterator. NOT USED */
 #cmakedefine QMC_FASTWALKER @QMC_FASTWALKER@
 
+/* Define if sincos function exists */
+#cmakedefine HAVE_SINCOS
+
 #endif // QMCPLUSPLUS_CONFIGURATION_H
