--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -48,14 +48,17 @@ CHECK_FUNCTION_EXISTS(sincos HAVE_SINCOS)
 ######################################################################
 SET(QMC_BUILD_STATIC 0)
 SET(BUILD_QMCTOOLS 0)
-SET(BUILD_SANDBOX 0)
+SET(BUILD_SANDBOX 1)
 SET(MPIP_PROFILE 0)
 
 ######################################################################
 # Performance-related macros
 # QMC_SK_USE_RECURSIVE enable/disable recursive evalaution of SK
 ######################################################################
-SET(QMC_SK_USE_RECURSIVE 0)
+SET(QMC_SK_USE_RECURSIVE 1)
+IF(NOT $ENV{QMC_SK_RECURSIVE} MATCHES QMC_SK_USE_RECURSIVE)
+  SET(QMC_SK_USE_RECURSIVE $ENV{QMC_SK_RECURSIVE}) 
+ENDIF(NOT $ENV{QMC_SK_RECURSIVE} MATCHES QMC_SK_USE_RECURSIVE)
 
 ######################################################################
 # Overwrite with environments if they differ from the set values
@@ -180,7 +183,7 @@ IF(FOUND_HDF5)
   INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
   LINK_LIBRARIES(${HDF5_LIBRARY})
   #zlib
-  NCLUDE(${PROJECT_CMAKE}/FindZLIB.cmake)
+  INCLUDE(${PROJECT_CMAKE}/FindZLIB.cmake)
   IF(ZLIB_FOUND)
     LINK_LIBRARIES(${ZLIB_LIBRARY})
   ENDIF(ZLIB_FOUND)
