Add Bspline3D functions.
git-svn-id: http://qmcpack.googlecode.com/svn@2078 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -25,6 +25,8 @@ SET(FERMION_SRCS
   SPOSetBase.cpp
   BasisSetFactory.cpp
   SplineSetBuilder.cpp
+  Bspline3DSetBase.cpp
+  Bspline3DSet.cpp
   TricubicBsplineSetBuilder.cpp
   Fermion/DiracDeterminantBase.cpp
   Fermion/SlaterDet.cpp
