Update reader/writer to handle localized orbitals with floating grids.
git-svn-id: http://qmcpack.googlecode.com/svn@2105 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -26,8 +26,10 @@ SET(FERMION_SRCS
   BasisSetFactory.cpp
   Bspline3DSetBase.cpp
   Bspline3DSet.cpp
+  Bspline3DSetTrunc.cpp
   TricubicBsplineSetBuilder.cpp
   TricubicBsplineSetBuilder.1.cpp
+  TricubicBsplineSetBuilder.2.cpp
   Fermion/DiracDeterminantBase.cpp
   Fermion/SlaterDet.cpp
   Fermion/SlaterDetBuilder.cpp
