Update for the random generator.
git-svn-id: http://qmcpack.googlecode.com/svn@2137 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -45,6 +45,9 @@ ${BLAS_LIBRARY} ${FORTRAN_LIBS})
 ADD_EXECUTABLE(density2D densityplot.cpp)
 TARGET_LINK_LIBRARIES(density2D qmc qmcbase qmcutil)
 
+ADD_EXECUTABLE(gofr gofr.cpp)
+TARGET_LINK_LIBRARIES(gofr qmc qmcbase qmcutil)
+
 #ADD_EXECUTABLE(spline spline.cpp)
 #TARGET_LINK_LIBRARIES(spline qmc qmcbase)
 #ADD_EXECUTABLE(spline3d spline3.cpp)
@@ -53,5 +56,5 @@ TARGET_LINK_LIBRARIES(density2D qmc qmcbase qmcutil)
 #TARGET_LINK_LIBRARIES(spline3d_io qmc qmcbase)
 #ADD_EXECUTABLE(molinit ../QMCWaveFunctions/OrbitalBuilderBase.cpp Assign.cpp)
 #TARGET_LINK_LIBRARIES(molinit qmc qmcbase)
-#ADD_EXECUTABLE(h5merge HDFWalkerMerger h5merge.cpp)
-#TARGET_LINK_LIBRARIES(h5merge qmc qmcbase qmcutil)
+ADD_EXECUTABLE(h5merge HDFWalkerMerger h5merge.cpp)
+TARGET_LINK_LIBRARIES(h5merge qmc qmcbase qmcutil)
