Adding a set of files for a single-particle orbital set using the einspline B-spline library.
git-svn-id: http://qmcpack.googlecode.com/svn@2145 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -39,6 +39,8 @@ SET(FERMION_SRCS
   MolecularOrbitals/STOBuilder.cpp
   MolecularOrbitals/GTOBuilder.cpp
   MolecularOrbitals/NGOBuilder.cpp
+  EinsplineSet.h
+  EinsplineSet.cpp
 )
 
 IF(QMC_COMPLEX)
