--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -147,7 +147,18 @@ INCLUDE(${PROJECT_CMAKE}/FindLibxml2.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindLapack.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
+INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
 #INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
+
+IF ( CMAKE_PKGCONFIG_EXECUTABLE )
+   # Find all the librtk stuff with pkg-config
+   PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
+   INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
+   ADD_DEFINITIONS (${EINSPLINE_DEFINES})
+ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
+   # Can't find pkg-config -- have to find libeinspline somehow else
+ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
+
 
 IF(QMC_MPI)
   IF(MPIP_PROFILE)
