Made compilation of EinsplineSet.cpp conditional up whether we have libeinspline installed.
git-svn-id: http://qmcpack.googlecode.com/svn@2146 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -39,10 +39,15 @@ SET(FERMION_SRCS
   MolecularOrbitals/STOBuilder.cpp
   MolecularOrbitals/GTOBuilder.cpp
   MolecularOrbitals/NGOBuilder.cpp
-  EinsplineSet.h
-  EinsplineSet.cpp
 )
 
+IF(HAVE_EINSPLINE)
+  SET(FERMION_SRCS 
+      ${FERMION_SRCS}
+      EinsplineSet.cpp
+  )
+ENDIF(HAVE_EINSPLINE)
+    
 IF(QMC_COMPLEX)
   SET(FERMION_SRCS ${FERMION_SRCS}
     ElectronGas/ElectronGasComplexOrbitalBuilder.cpp
