Adding a skeleton of EinsplineSetBuilder.
git-svn-id: http://qmcpack.googlecode.com/svn@2148 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -45,6 +45,7 @@ IF(HAVE_EINSPLINE)
   SET(FERMION_SRCS 
       ${FERMION_SRCS}
       EinsplineSet.cpp
+      EinsplineSetBuilder.cpp
   )
 ENDIF(HAVE_EINSPLINE)
     
