--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -154,7 +154,7 @@ IF ( CMAKE_PKGCONFIG_EXECUTABLE )
    # Find all the librtk stuff with pkg-config
    PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
    INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
-   ADD_DEFINITIONS (${EINSPLINE_DEFINES})
+   ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
 ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
    # Can't find pkg-config -- have to find libeinspline somehow else
 ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
