--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -155,6 +155,14 @@ IF ( CMAKE_PKGCONFIG_EXECUTABLE )
    PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
    INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
    ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
+   LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
+   LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
+   FIND_LIBRARY(EINSPLINE_LIBRARY einspline ${EINSPLINE_LINK_DIRS})
+   LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
+   MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
+   IF (EINSPLINE_LIBRARY)	
+      LINK_LIBRARIES(${EINSPLINE_LIBRARY})
+   ENDIF (EINSPLINE_LIBRARY)
 ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
    # Can't find pkg-config -- have to find libeinspline somehow else
 ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
