--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -44,6 +44,7 @@ SET(FERMION_SRCS
 IF(HAVE_EINSPLINE)
   SET(FERMION_SRCS 
       ${FERMION_SRCS}
+      EinsplineOrb.cpp
       EinsplineSet.cpp
       EinsplineSetBuilder.cpp
   )
