Comment out einspline for now.
git-svn-id: http://qmcpack.googlecode.com/svn@2171 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -47,7 +47,7 @@ CHECK_FUNCTION_EXISTS(sincos HAVE_SINCOS)
 # MPIP_PROFILE     profile mpi performance
 ######################################################################
 SET(QMC_BUILD_STATIC 0)
-SET(BUILD_QMCTOOLS 0)
+SET(BUILD_QMCTOOLS 1)
 SET(BUILD_SANDBOX 0)
 SET(MPIP_PROFILE 0)
 
@@ -150,22 +150,23 @@ INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
 #INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
 
-IF ( CMAKE_PKGCONFIG_EXECUTABLE )
-   # Find all the librtk stuff with pkg-config
-   PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
-   INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
-   ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
-   LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
-   LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
-   FIND_LIBRARY(EINSPLINE_LIBRARY einspline ${EINSPLINE_LINK_DIRS})
-   LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
-   MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
-   IF (EINSPLINE_LIBRARY)	
-      LINK_LIBRARIES(${EINSPLINE_LIBRARY})
-   ENDIF (EINSPLINE_LIBRARY)
-ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
-   # Can't find pkg-config -- have to find libeinspline somehow else
-ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
+#COMMENT OUT EINSPLINE 
+#IF ( CMAKE_PKGCONFIG_EXECUTABLE )
+#   # Find all the librtk stuff with pkg-config
+#   PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
+#   INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
+#   ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
+#   LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
+#   LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
+#   FIND_LIBRARY(EINSPLINE_LIBRARY einspline ${EINSPLINE_LINK_DIRS})
+#   LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
+#   MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
+#   IF (EINSPLINE_LIBRARY)	
+#      LINK_LIBRARIES(${EINSPLINE_LIBRARY})
+#   ENDIF (EINSPLINE_LIBRARY)
+#ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
+#   # Can't find pkg-config -- have to find libeinspline somehow else
+#ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
 
 
 IF(QMC_MPI)
@@ -242,4 +243,5 @@ INCLUDE_DIRECTORIES(
 )
 ADD_DEFINITIONS(-DHAVE_CONFIG_H -DAPPNAMESPACE=qmcplusplus)
 
+SUBDIRS(boost)
 SUBDIRS(src)
