Make QMC_COMPLEX=0 as the default.
git-svn-id: http://qmcpack.googlecode.com/svn@2184 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -28,7 +28,7 @@ SET (EXECUTABLE_OUTPUT_PATH ${qmcpack_BINARY_DIR}/bin CACHE PATH "Single output 
 SET(OHMMS_DIM 3)
 SET(OHMMS_INDEXTYPE int)
 SET(OHMMS_PRECISION double)
-SET(QMC_COMPLEX 1)
+SET(QMC_COMPLEX 0)
 SET(QMC_MPI 1)
 SET(QMC_OMP 0)
 SET(QMC_BITS 32)
@@ -102,6 +102,7 @@ SET(HAVE_LIBGSL 0)
 SET(INTEL_COMPILER 0)
 SET(MAC_VECLIB 0)
 SET(ENABLE_GTK_GUI 0)
+SET(HAVE_EINSPLINE 0)
 
 ######################################################
 # Directory where customize cmake files reside
@@ -130,6 +131,8 @@ ENDIF($ENV{CXX} MATCHES "xlC")
 
 IF(NOT FOUND_CXXENV)
   INCLUDE(${PROJECT_CMAKE}/GNUCompilers.cmake)
+  #disable MPI if one has to use gnu compilers
+  SET(QMC_MPI 0)
 ENDIF(NOT FOUND_CXXENV)
 
 #COMPIELR MANUAL SELECTION
@@ -156,6 +159,7 @@ INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
 #   PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
 #   INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
 #   ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
+#   SET(HAVE_EINSPLINE 1)
 #   LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
 #   LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
 #   FIND_LIBRARY(EINSPLINE_LIBRARY einspline ${EINSPLINE_LINK_DIRS})
