Move ohmms-config.h.cmake.in to config.h.cmake.in. Cmake will create src/config.h like usual packages.
git-svn-id: http://qmcpack.googlecode.com/svn@2221 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 #CONFIGURE_FILE(${qmcpack_SOURCE_DIR}/src/Configuration.h.in
 #               ${qmcpack_BINARY_DIR}/src/Configuration.h)
-CONFIGURE_FILE(${qmcpack_SOURCE_DIR}/src/ohmms-config.h.cmake.in
-               ${qmcpack_BINARY_DIR}/src/ohmms-config.h)
+CONFIGURE_FILE(${qmcpack_SOURCE_DIR}/src/config.h.cmake.in
+               ${qmcpack_BINARY_DIR}/src/config.h)
 
 ####################################
 # create libqmcutil
