Add boost/serialization for testing.
git-svn-id: http://qmcpack.googlecode.com/svn@2223 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/boost/CMakeLists.txt
+++ b/trunk/boost/CMakeLists.txt
@@ -1,1 +1,10 @@
-SUBDIRS(program_options)
+##########################################################################
+# Boost Version information
+# 1.34.x supports cmake build.
+##########################################################################
+set(BOOST_VERSION_MAJOR 1)
+set(BOOST_VERSION_MINOR 33)
+set(BOOST_VERSION_SUBMINOR 0)
+set(BOOST_VERSION "${BOOST_VERSION_MAJOR}.${BOOST_VERSION_MINOR}.${BOOST_VERSION_SUBMINOR}")
+
+SUBDIRS(serialization)
