git-svn-id: http://qmcpack.googlecode.com/svn@2240 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/oompi-config.h.cmake.in
+++ b/trunk/src/oompi-config.h.cmake.in
@@ -8,7 +8,7 @@
 #ifndef OHMMS_OOMPI_CONFIGURATION_H
 #define OHMMS_OOMPI_CONFIGURATION_H
 
-#include "ohmms-config.h"
+#include "config.h"
 
 #if SIZEOF_INT != SIZEOF_BOOL
 #define OOMPI_BOOL_NE_INT 1
