Adding BsplineFunctor class.  Not yet functional.
git-svn-id: http://qmcpack.googlecode.com/svn@2250 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -19,6 +19,7 @@ SET(JASTROW_SRCS
   Jastrow/JastrowBuilder.cpp
   Jastrow/ThreeBodyGeminal.cpp
   Jastrow/ThreeBodyBlockSparse.cpp
+  Jastrow/BsplineFunctor.cpp
 )
 
 SET(FERMION_SRCS
