Adding a builder for Bspline Jastrow functions.
git-svn-id: http://qmcpack.googlecode.com/svn@2252 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(JASTROW_SRCS
   Jastrow/ThreeBodyGeminal.cpp
   Jastrow/ThreeBodyBlockSparse.cpp
   Jastrow/BsplineFunctor.cpp
+  Jastrow/BsplineJastrowBuilder.cpp
 )
 
 SET(FERMION_SRCS
