Move from QMCWaveFunctions/MolecularOrbitals.
git-svn-id: http://qmcpack.googlecode.com/svn@2268 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -2,14 +2,14 @@ PROJECT(qmctools)
 
 SET(QMCTOOLS
   ../QMCWaveFunctions/OrbitalBuilderBase.cpp
-  ../QMCWaveFunctions/MolecularOrbitals/RGFBuilderBase.cpp
-  ../QMCWaveFunctions/MolecularOrbitals/GTO2GridBuilder.cpp
+  RGFBuilderBase.cpp
+  GTO2GridBuilder.cpp
 )
 
 SET(CASINO
   ../QMCWaveFunctions/OrbitalBuilderBase.cpp
-  ../QMCWaveFunctions/MolecularOrbitals/RGFBuilderBase.cpp
-  ../QMCWaveFunctions/MolecularOrbitals/GTO2GridBuilder.cpp
+  RGFBuilderBase.cpp
+  GTO2GridBuilder.cpp
   ../QMCApp/InitMolecularSystem.cpp
   QMCGaussianParserBase.cpp
   GaussianFCHKParser.cpp
