EinsplineWrapper done, but not tested.
git-svn-id: http://qmcpack.googlecode.com/svn@2278 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -48,6 +48,7 @@ IF(HAVE_EINSPLINE)
       ${FERMION_SRCS}
       EinsplineSet.cpp
       EinsplineSetBuilder.cpp
+      EinsplineWrapper.cpp
   )
 ENDIF(HAVE_EINSPLINE)
     
