Remove LRJastrowSingleton.cpp
git-svn-id: http://qmcpack.googlecode.com/svn@2315 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -64,7 +64,6 @@ SET(PARTICLE
   LongRange/StructFact.cpp
   LongRange/LPQHIBasis.cpp			      	
   LongRange/LRCoulombSingleton.cpp
-  LongRange/LRJastrowSingleton.cpp
 )
 
 SET(PARTICLEIO
@@ -86,6 +85,7 @@ SUBDIRS(QMCWaveFunctions)
 SUBDIRS(QMCHamiltonians)
 SUBDIRS(QMCDrivers)
 SUBDIRS(QMCApp)
+#SUBDIRS(einspline)
 
 IF(BUILD_QMCTOOLS)
   SUBDIRS(QMCTools)
