Fix cmake error.
git-svn-id: http://qmcpack.googlecode.com/svn@2396 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -72,7 +72,7 @@ IF(OHMMS_DIM MATCHES 3)
     
   IF(NOT QMC_COMPLEX)
     SET(FERMION_SRCS ${FERMION_SRCS} AGPDeterminant.cpp AGPDeterminantBuilder.cpp)
-  ENDIF(QMC_COMPLEX)
+  ENDIF(NOT QMC_COMPLEX)
 ENDIF(OHMMS_DIM MATCHES 3)
 
 ####################################
