Update for ROUND.
git-svn-id: http://qmcpack.googlecode.com/svn@2448 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/config.h.cmake.in
+++ b/trunk/src/config.h.cmake.in
@@ -81,6 +81,9 @@
 #cmakedefine QMC_FASTWALKER @QMC_FASTWALKER@
 
 /* Define if sincos function exists */
-#cmakedefine HAVE_SINCOS
+#cmakedefine HAVE_SINCOS @HAVE_SINCOS@
+
+/* Define if std::round function exists */
+#cmakedefine HAVE_STD_ROUND @HAVE_STD_ROUND@
 
 #endif // QMCPLUSPLUS_CONFIGURATION_H
