Add checking round function.
git-svn-id: http://qmcpack.googlecode.com/svn@2449 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -38,6 +38,7 @@ SET(QMC_BITS 32)
 ######################################################################
 INCLUDE(${CMAKE_ROOT}/Modules/CheckFunctionExists.cmake)
 CHECK_FUNCTION_EXISTS(sincos HAVE_SINCOS)
+CHECK_FUNCTION_EXISTS(round HAVE_STD_ROUND)
 
 ######################################################################
 # Build options
