--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -143,6 +143,10 @@ IF(NOT FOUND_CXXENV)
   ENDIF(INTEL_CXX_FLAS)
 ENDIF(NOT FOUND_CXXENV)
 
+IF(CYGWIN)
+  INCLUDE(${PROJECT_CMAKE}/GNUCompilers.cmake)
+ENDIF(CYGWIN)
+
 ### most likely GNU, use GNU options
 IF(NOT FOUND_CXXENV)
   INCLUDE(${PROJECT_CMAKE}/GNUCompilers.cmake)
