Add ENABLE_PHD5 to use parallel hdf5 for configurations.
git-svn-id: http://qmcpack.googlecode.com/svn@2464 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/config.h.cmake.in
+++ b/trunk/src/config.h.cmake.in
@@ -29,6 +29,9 @@
 /* Define to 1 if you have the `hdf5' library (-lhdf5). */
 #cmakedefine HAVE_LIBHDF5 @HAVE_LIBHDF5@
 
+/* Define to 1 if you want to use parallel hdf5 for frequent output */
+#cmakedefine ENABLE_PHDF5 @ENABLE_PHDF5@
+
 /* Define to 1 if you have the `boost' library */
 #cmakedefine HAVE_LIBBOOST @HAVE_LIBBOOST@
 
