--- a/trunk/.settings/org.eclipse.cdt.core.prefs
+++ b/trunk/.settings/org.eclipse.cdt.core.prefs
@@ -1,3 +1,3 @@
-#Wed Apr 25 13:17:21 CDT 2007
+#Sat Feb 23 09:30:36 CST 2008
 eclipse.preferences.version=1
-indexerId=org.eclipse.cdt.core.fastIndexer
+environment/project/0.921305511=<?xml version\="1.0" encoding\="UTF-8"?>\n<environment append\="true" appendContributed\="true">\n<variable delimiter\=";" name\="CC" operation\="append" value\="/opt/intel/cc/9.1.037/bin/cc"/>\n<variable delimiter\=";" name\="CXX" operation\="append" value\="/opt/intel/cc/9.1.037/bin/icpc"/>\n<variable delimiter\=";" name\="MKL_HOME" operation\="append" value\="/Library/Frameworks/Intel_MKL.framework/Versions/Current"/>\n</environment>\n
