Add a test driver.
git-svn-id: http://qmcpack.googlecode.com/svn@2520 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(QMCDRIVERS
   DMC/DMCUpdatePbyP.cpp
   DMC/DMCNonLocalUpdate.cpp
   DMC/DMC.cpp
+  DMC/DMCPeta.cpp
   DMC/DMCFactory.cpp
   DMC/WalkerControlFactory.cpp
   DMC/WalkerReconfiguration.cpp
