Adding a new timer class and timer manager.
git-svn-id: http://qmcpack.googlecode.com/svn@2582 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(UTILITIES
   Utilities/SimpleParser.cpp 
   Utilities/OhmmsInform.cpp 
   Utilities/OhmmsInfo.cpp 
+  Utilities/NewTimer.cpp
   OhmmsData/Libxml2Doc.cpp
   OhmmsApp/ProjectData.cpp
   OhmmsApp/RandomNumberControl.cpp
